# Industrial3DScanning

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  README.md  drawSettings.ini  mainpage.md
OpenGL_Application/include/: KDTree.h
OpenGL_Application/source/: KDTree.cpp  OpenGL_Application.cpp
OpenGL_Application_v1/: OpenGL_Application.sln  OpenGL_Application.vcxproj  OpenGL_Application.vcxproj.filters
OpenGL_Application_v1/Debug/: OpenGL_Application.ilk  vc141.idb
OpenGL_Application_v1/Debug/OpenGL_A.F42D64A3.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  OpenGL_Application.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
OpenGL_Application_v1/GLFW/: glfw3.lib
OpenGL_Application_v1/data/: cap.xyz
OpenGL_Application_v1/include/: GLcamera.h  KDTree.h
OpenGL_Application_v1/source/: KDTree.cpp  OpenGL_Application.cpp
_flori/include/: GLwidget.h  KDTree.h  Point3d.h  SVD.h
_flori/source/: GLcamera.cpp  KDTree.cpp  OpenGL_Application.cpp  Point3d.cpp  SVD.cpp
doc/: mainpage.md
include/: BaseTabWidget.h  BestFitLineWidget.h  BestFitPlaneWidget.h  BestFitSphereWidget.h  CMakeLists.txt  GLcamera.h  GLwidget.h  KDTree.h  MainWindow.h  Matrix.h  NearestNeighboorWidget.h  NearestNeighborWidget.h  NormalWidget.h  Point3d.h  RangeQueryDialog.h  RangeQueryWidget.h  SVD.h  SmoothingWidget.h  ThinningWidget.h
query prototype/: L03 Test Tree.xyz  MainWindow.cpp  MainWindow.h  Point3d.cpp  Point3d.h
source/: BestFitLineWidget.cpp  BestFitPlaneWidget.cpp  BestFitSphereWidget.cpp  CMakeLists.txt  GLcamera.cpp  GLwidget.cpp  KDTree.cpp  MainWindow.cpp  NearestNeighboorWidget.cpp  NearestNeighborWidget.cpp  NormalWidget.cpp  OpenGL_App_QT.cpp  Point3d.cpp  RangeQueryDialog.cpp  RangeQueryWidget.cpp  SVD.cpp  SmoothingWidget.cpp  ThinngingWidget.cpp
